--- a/app/Styles/devices.css
+++ b/app/Styles/devices.css
@@ -2659,7 +2659,7 @@
   box-shadow: inset 0 0 0 2px #36373a, inset 0 0 40px 1px #1d1e20, inset 0 12px 24px 1px #9b9ca1, inset 0 -12px 24px 1px #050505;
   height: 385px;
   left: 0;
-  overflow: hidden;
+  /* overflow: hidden; */
   position: absolute;
   top: 5px;
   width: 320px;
