--- a/app/Styles/understand.module.css
+++ b/app/Styles/understand.module.css
@@ -10,7 +10,7 @@
     position: relative; 
 
     font-size: 1.2rem !important;
-    
+
 
 }
 
@@ -35,6 +35,10 @@
 
 
 
+
+
+
+
 }
 
 .mainImage {
@@ -43,7 +47,7 @@
     margin: 0 auto;
     position: absolute;
     left: 50%;
-    top: 18%;
+    top: 23%;
     transform:translate(-50%, -50%);
     -webkit-transform:translate(-50%, -50%);
     -moz-transform:translate(-50%, -50%);
@@ -54,6 +58,18 @@
 }
 
 .mainHeaderContainer {
+    position: absolute;
+    left: 50%;
+    right: 50%;
+    top: 38%;
+    width: 80%;
+    max-width: 400px;
+    /* outline: 4px solid lime; */
+    transform:translate(-50%, -2%) ;
+    -webkit-transform:translate(-50%, -2%) ;
+    -moz-transform:translate(-50%, -2%) ;
+    -ms-transform:translate(-50%, -2%) ;
+    -o-transform:translate(-50%, -2%) ;
 }
 
 .mainTextHeader {
@@ -75,21 +91,25 @@
 }
 
 .mainSupportingTextContainer {
-
-
     width: 80%;
-    margin: 0 auto; 
+    max-width: 600px;  
+    margin: 0 auto;
     text-align: center;
     margin-bottom: 7rem;
-    margin-top: 0.45em; 
+    margin-top: 0.45em;
     color: #69696f;
+    position: absolute;
+    left: 50%;
+    right: 50%;
+    top: 62%;
 
 
-
-
-
-
-
+    /* outline: 4px solid lime; */
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
 }
 
 
@@ -124,32 +144,40 @@
     -moz-border-radius:19px;
     -ms-border-radius:19px;
     -o-border-radius:19px;
-    margin-top: -4em;
-
-    -webkit-user-select: none; /* Safari */
-    -moz-user-select: none;    /* Firefox */
-    -ms-user-select: none;     /* IE10+/Edge */
-    user-select: none; 
+    margin-bottom: 3em;
+    -webkit-user-select: none;
+    /*Safari*/-moz-user-select: none;
+    /*Firefox*/-ms-user-select: none;
+    /*IE10+/Edge*/user-select: none;
     cursor: pointer;
-
-    color: white; 
+    color: white;
     font-size: 1.5rem;
     font-weight: bolder;
-
-    /* Animation properties */
     transition: all 0.1s ease-in-out;
-    transform: scale(1);
+    position: absolute;
+    top: 75%;
+    left: 50%;
+    right: 50%;
+    outline: 11px solid lime;
+
+
+    transform: translate(-50%, -50%) scale(1);
+    -webkit-transform: translate(-50%, -50%) scale(1);
+    -moz-transform: translate(-50%, -50%) scale(1);
+    -ms-transform: translate(-50%, -50%) scale(1);
+    -o-transform: translate(-50%, -50%) scale(1);
+    
 }
 
 .cta:hover {
     background-color: #e8894a;
-    transform: scale(1.02);
+    transform: translate(-50%, -50%) scale(1.02);
     box-shadow: 0 2px 8px rgba(244, 155, 83, 0.3);
 }
 
 .cta:active {
     background-color: #d67d3e;
-    transform: scale(0.98);
+    transform: translate(-50%, -50%) scale(0.98);
     box-shadow: 0 1px 4px rgba(244, 155, 83, 0.4);
 }
 
