--- a/app/Styles/understand.module.css
+++ b/app/Styles/understand.module.css
@@ -184,6 +184,49 @@
 
 
 
+@media(max-width: 400px) and (min-width: 550px){
+
+
+    /* Add in all the main onboarding elements here  */
+
+
+    .cta{
+        height: 55px;
+        width: 275px;
+        background-color: #f49b53;
+        display: grid;
+        place-content: center;
+        border-radius:19px;
+        -webkit-border-radius:19px;
+        -moz-border-radius:19px;
+        -ms-border-radius:19px;
+        -o-border-radius:19px;
+        margin-bottom: 3em;
+        -webkit-user-select: none;
+        /*Safari*/-moz-user-select: none;
+        /*Firefox*/-ms-user-select: none;
+        /*IE10+/Edge*/user-select: none;
+        cursor: pointer;
+        color: white;
+        font-size: 1.5rem;
+        font-weight: bolder;
+        transition: all 0.1s ease-in-out;
+        position: absolute;
+        top: 75%;
+        left: 50%;
+        right: 50%;
+        outline: 11px solid lime;
+    
+    
+        transform: translate(-50%, -50%) scale(1);
+        -webkit-transform: translate(-50%, -50%) scale(1);
+        -moz-transform: translate(-50%, -50%) scale(1);
+        -ms-transform: translate(-50%, -50%) scale(1);
+        -o-transform: translate(-50%, -50%) scale(1);
+        
+    }
+
+    .paginationElementContainer{
 
 
 
@@ -192,6 +235,69 @@
 
 
 
+    }
+
+
+
+    .mainSupportingTextContainer {
+        width: 80%;
+        max-width: 600px;  
+        margin: 0 auto;
+        text-align: center;
+        margin-bottom: 7rem;
+        margin-top: 0.45em;
+        color: #69696f;
+        position: absolute;
+        left: 50%;
+        right: 50%;
+        top: 62%;
+    
+    
+        /* outline: 4px solid lime; */
+        transform: translate(-50%, -50%);
+        -webkit-transform: translate(-50%, -50%);
+        -moz-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        -o-transform: translate(-50%, -50%);
+    }
+
+
+    
+.mainHeaderContainer {
+    position: absolute;
+    left: 50%;
+    right: 50%;
+    top: 38%;
+    width: 80%;
+    max-width: 400px;
+    /* outline: 4px solid lime; */
+    transform:translate(-50%, -2%) ;
+    -webkit-transform:translate(-50%, -2%) ;
+    -moz-transform:translate(-50%, -2%) ;
+    -ms-transform:translate(-50%, -2%) ;
+    -o-transform:translate(-50%, -2%) ;
+}
+
+.mainTextHeader {
+
+    margin: 0 auto; 
+    margin-top: 4rem !important; 
+
+    display: grid;
+    place-content: center;
+    font-size: 2.1rem;
+    font-weight: bolder;
+    /* width: 60%;  */
+    text-align: center;
+    line-height: normal;
+    color: #013699; 
+    
+
+
+}
+
+
+.headerImageContainer {
 
 
 
@@ -200,21 +306,25 @@
 
 
 
+}
+
+.mainImage {
+    width: 16em;
+    height: 16em;
+    margin: 0 auto;
+    position: absolute;
+    left: 50%;
+    top: 23%;
+    transform:translate(-50%, -50%);
+    -webkit-transform:translate(-50%, -50%);
+    -moz-transform:translate(-50%, -50%);
+    -ms-transform:translate(-50%, -50%);
+    -o-transform:translate(-50%, -50%);
+    
+
+}
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+} 
 
