--- a/app/Styles/understand.module.css
+++ b/app/Styles/understand.module.css
@@ -223,13 +223,14 @@
         -ms-transition: all 0.1s ease-in-out;
         -o-transition: all 0.1s ease-in-out;
 
-        
+
 
 }
 
     .paginationElementContainer{
 
 
+        outline: 44px solid lime;
 
 
 
