--- a/app/Styles/ideal.module.css
+++ b/app/Styles/ideal.module.css
@@ -222,7 +222,7 @@
     -moz-transform:translate(-50%, -50%);
     -ms-transform:translate(-50%, -50%);
     -o-transform:translate(-50%, -50%);
-    
+
 
 }
 
@@ -230,21 +230,26 @@
 }
 
 .mainTextHeader {
-
-    margin: 0 auto; 
-    margin-top: 5rem !important; 
-
+    margin: 0 auto;
+    margin-top: 5rem !important;
     display: grid;
     place-content: center;
     font-size: 2.1rem;
     font-weight: bolder;
     text-align: center;
     line-height: 1.12555;
-    color: #013699; 
-
+    color: #013699;
     position: absolute;
+    top: 30%;
+    left: 50%;
+    right: 50%;
 
 
+    transform:translate(-50%, -50%) ;
+    -webkit-transform:translate(-50%, -50%) ;
+    -moz-transform:translate(-50%, -50%) ;
+    -ms-transform:translate(-50%, -50%) ;
+    -o-transform:translate(-50%, -50%) ;
 }
 
 .mainSupportingTextContainer {
@@ -263,6 +268,8 @@
     -moz-transform:translate(-50%, -50%) ;
     -ms-transform:translate(-50%, -50%) ;
     -o-transform:translate(-50%, -50%) ;
+
+    /* outline: 22px solid lime; */
 }
 
 
@@ -299,14 +306,15 @@
     -o-border-radius:19px;
     margin-top: -4em;
     -webkit-user-select: none;
-    /*Safari*/-moz-user-select: none;
-    /*Firefox*/-ms-user-select: none;
-    /*IE10+/Edge*/user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
     cursor: pointer;
     color: white;
     font-size: 1.5rem;
     font-weight: bolder;
-    /*Animationproperties*/transition: all 0.1s ease-in-out;
+    
+    transition: all 0.1s ease-in-out;
     transform: scale(1);
     position: absolute;
     left: 50%;
@@ -320,25 +328,6 @@
     -ms-transform:translate(-50%, 5%);
     -o-transform:translate(-50%, 5%);
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 }
