--- a/app/Styles/ideal.module.css
+++ b/app/Styles/ideal.module.css
@@ -79,20 +79,25 @@
 }
 
 .mainSupportingTextContainer {
-
-
     width: 80%;
-    margin: 0 auto; 
+    margin: 0 auto;
     text-align: center;
     margin-bottom: 7.5rem;
-    margin-top: 0.65em; 
+    margin-top: 0.65em;
     color: #69696f;
+    position: absolute;
+    left: 50%;
+    right: 50%;
+    bottom: 20%;
+    transform:translate(-50%, -50%);
+    -webkit-transform:translate(-50%, -50%);
+    -moz-transform:translate(-50%, -50%);
+    -ms-transform:translate(-50%, -50%);
+    -o-transform:translate(-50%, -50%);
+    font-size: 1.5rem;
+    max-width: 600px;
 
-
-
-
-
-
+    
 }
 
 
@@ -104,6 +109,15 @@
     
 
 
+}
+
+
+.paginationList{
+    transform:translate(0, 48vh) !important;
+    -webkit-transform:translate(0, 48vh) !important;
+    -moz-transform:translate(0, 48vh) !important;
+    -ms-transform:translate(0, 48vh) !important;
+    -o-transform:translate(0, 48vh) !important;
 }
 
 
@@ -128,6 +142,8 @@
     width: 275px;
     background-color: #f49b53;
     display: grid;
+    /* position: relative; */
+
     place-content: center;
     border-radius:19px;
     -webkit-border-radius:19px;
@@ -147,18 +163,32 @@
 
     /* Animation properties */
     transition: all 0.1s ease-in-out;
-    transform: scale(1);
+
+    position: absolute;
+    left: 50%;
+    right: 50%;
+    bottom: 25%;
+    transform: translate(-50%, -50%) scale(1);
+    -webkit-transform: translate(-50%, -50%) scale(1);
+    -moz-transform: translate(-50%, -50%) scale(1);
+    -ms-transform: translate(-50%, -50%) scale(1);
+    -o-transform: translate(-50%, -50%) scale(1);
+
+
+
+
+
 }
 
 .cta:hover {
     background-color: #e8894a;
-    transform: scale(1.02);
+    transform: translate(-50%, -50%) scale(1.02);
     box-shadow: 0 2px 8px rgba(244, 155, 83, 0.3);
 }
 
 .cta:active {
     background-color: #d67d3e;
-    transform: scale(0.98);
+    transform: translate(-50%, -50%) scale(0.98);
     box-shadow: 0 1px 4px rgba(244, 155, 83, 0.4);
 }
 
@@ -247,6 +277,7 @@
 
 .mainSupportingTextContainer {
     width: 75vw;
+    max-width: 600px;
     margin: 0 auto;
     text-align: center;
     margin-bottom: 7.5rem;
@@ -255,14 +286,14 @@
     position: absolute;
     left: 50%;
     right: 50%;
-    bottom: 20%;
+    bottom: 10%;
     transform:translate(-50%, -50%) ;
     -webkit-transform:translate(-50%, -50%) ;
     -moz-transform:translate(-50%, -50%) ;
     -ms-transform:translate(-50%, -50%) ;
     -o-transform:translate(-50%, -50%) ;
+    /* outline: 2px solid lime; */
 
-    /* outline: 22px solid lime; */
 }
 
 
@@ -308,18 +339,16 @@
     font-weight: bolder;
     
     transition: all 0.1s ease-in-out;
-    transform: scale(1);
     position: absolute;
     left: 50%;
     right: 50%;
-    bottom: 28%;
+    bottom: 25%;
 
-
-    transform:translate(-50%, 5%);
-    -webkit-transform:translate(-50%, 5%);
-    -moz-transform:translate(-50%, 5%);
-    -ms-transform:translate(-50%, 5%);
-    -o-transform:translate(-50%, 5%);
+    transform: translate(-50%, 5%) scale(1);
+    -webkit-transform: translate(-50%, 5%) scale(1);
+    -moz-transform: translate(-50%, 5%) scale(1);
+    -ms-transform: translate(-50%, 5%) scale(1);
+    -o-transform: translate(-50%, 5%) scale(1);
 }
 
     
