--- a/app/Styles/adult.module.css
+++ b/app/Styles/adult.module.css
@@ -54,62 +54,60 @@
 }
 
 .mainTextHeader {
-
-    margin: 0 auto; 
-    margin-top: 5rem !important; 
-
+    margin: 0 auto;
+    margin-top: 5rem !important;
     display: grid;
     place-content: center;
     font-size: 2.1rem;
     font-weight: bolder;
-    /* width: 60%;  */
     text-align: center;
     line-height: 1.12555;
-    /* line-height: normal; */
-    color: #013699; 
-    
-
-
+    color: #013699;
+    width: 80vw; 
+    max-width: 600px;
+    position: absolute;
+    left: 50%;
+    right: 50%;
+    bottom: 50%; 
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
 }
 
 .mainSupportingTextContainer {
-
-
     width: 80%;
-    margin: 0 auto; 
+    margin: 0 auto;
     text-align: center;
     margin-bottom: 7.5rem;
-    margin-top: 0.65em; 
+    margin-top: 0.65em;
     color: #69696f;
-
-
-
-
-
-
+    position: absolute;
+    left: 50%;
+    right: 50%;
+    bottom: 25%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    font-size: 1.5rem;
+    max-width: 600px;
 }
-
 
 .affectsList{
-
-
-list-style-type: disc;
-width: min-content; 
-margin: 0 auto; 
-text-align: left;
-
-
-
+    list-style-type: disc;
+    width: min-content; 
+    margin: 0 auto; 
+    text-align: left;
+    font-size: 1.2rem;
 }
 
-
 .affectsListItem{
-
-
-
-
-
-
+    font-size: 1.2rem;
+    margin-bottom: 0.5rem;
+    line-height: 1.4;
 }
 
 
@@ -148,73 +146,354 @@ text-align: left;
     -ms-border-radius:19px;
     -o-border-radius:19px;
     margin-top: -4em;
-    outline: 5px solid red;
     position: absolute;
     left: 50%;
     right: 50%;
-    transform:translate(-50%, 20%) ;
+    bottom: 10%;
     -webkit-user-select: none;
-    /*Safari*/-moz-user-select: none;
-    /*Firefox*/-ms-user-select: none;
-    /*IE10+/Edge*/user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
     cursor: pointer;
     color: white;
     font-size: 1.5rem;
     font-weight: bolder;
-    /*Animationproperties*/transition: all 0.1s ease-in-out;
-    transform: scale(1);
-    -webkit-transform:translate(-50%, 20%) ;
-    -moz-transform:translate(-50%, 20%) ;
-    -ms-transform:translate(-50%, 20%) ;
-    -o-transform:translate(-50%, 20%) ;
+    transition: all 0.1s ease-in-out;
+    transform: translate(-50%, -50%) scale(1);
+    -webkit-transform: translate(-50%, -50%) scale(1);
+    -moz-transform: translate(-50%, -50%) scale(1);
+    -ms-transform: translate(-50%, -50%) scale(1);
+    -o-transform: translate(-50%, -50%) scale(1);
 }
 
 .cta:hover {
     background-color: #e8894a;
-    transform: scale(1.02);
+    transform: translate(-50%, -50%) scale(1.02);
     box-shadow: 0 2px 8px rgba(244, 155, 83, 0.3);
 }
 
 .cta:active {
     background-color: #d67d3e;
-    transform: scale(0.98);
+    transform: translate(-50%, -50%) scale(0.98);
     box-shadow: 0 1px 4px rgba(244, 155, 83, 0.4);
+}
+
+@media (min-width: 375px) and (max-width: 450px){
+
+.mainContainer {
+    background-color: white !important;
+    min-height: 100vh;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    position: relative; 
+}
+
+.subContainer{
+    width: 50vw; 
+    margin: 0 auto; 
+    padding-top: 27vh; 
+    display: grid;
+    place-content: center;
+}
+
+.headerImageContainer {
+}
+
+.mainImage {
+    width: 14.5em;
+    height: 14.5em;
+    margin: 0 auto;
+    position: absolute;
+    left: 50%;
+    top: 18%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+}
+
+.mainHeaderContainer {
+}
+
+.mainTextHeader {
+    margin: 0 auto;
+    margin-top: 5rem !important;
+    display: grid;
+    place-content: center;
+    font-size: 2.1rem;
+    font-weight: bolder;
+    text-align: center;
+    line-height: 1.12555;
+    color: #013699;
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    right: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+}
+
+.mainSupportingTextContainer {
+    width: 75vw;
+    max-width: 600px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 7.5rem;
+    margin-top: 0.65em;
+    color: #69696f;
+    position: absolute;
+    left: 50%;
+    right: 50%;
+    bottom: 15%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    font-size: 1.4rem;
+}
+
+.affectsList{
+    list-style-type: disc;
+    width: min-content; 
+    margin: 0 auto; 
+    text-align: left;
+    font-size: 1.1rem;
+}
+
+.affectsListItem{
+    font-size: 1.1rem;
+    margin-bottom: 0.4rem;
+    line-height: 1.3;
+}
+
+.ctaContainer{
+    height: 3em; 
+    display: grid;
+    place-content: center;
+}
+
+.cta{
+    height: 55px;
+    width: 275px;
+    background-color: #f49b53;
+    display: grid;
+    place-content: center;
+    border-radius:19px;
+    -webkit-border-radius:19px;
+    -moz-border-radius:19px;
+    -ms-border-radius:19px;
+    -o-border-radius:19px;
+    margin-top: -4em;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    cursor: pointer;
+    color: white;
+    font-size: 1.5rem;
+    font-weight: bolder;
+    transition: all 0.1s ease-in-out;
+    position: absolute;
+    left: 50%;
+    right: 50%;
+    bottom: 5%;
+    transform: translate(-50%, -50%) scale(1);
+    -webkit-transform: translate(-50%, -50%) scale(1);
+    -moz-transform: translate(-50%, -50%) scale(1);
+    -ms-transform: translate(-50%, -50%) scale(1);
+    -o-transform: translate(-50%, -50%) scale(1);
+}
+
+.cta:hover {
+    background-color: #e8894a;
+    transform: translate(-50%, -50%) scale(1.02);
+    box-shadow: 0 2px 8px rgba(244, 155, 83, 0.3);
+}
+
+.cta:active {
+    background-color: #d67d3e;
+    transform: translate(-50%, -50%) scale(0.98);
+    box-shadow: 0 1px 4px rgba(244, 155, 83, 0.4);
+}
+
 }
 
 
 
+@media (min-width: 375px) and (max-width: 450px){
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    
+    .mainContainer {
+        background-color: white !important;
+        min-height: 100vh;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        position: relative; 
+    
+    }
+    
+    
+    .subContainer{
+    
+        width: 50vw; 
+        margin: 0 auto; 
+        padding-top: 27vh; 
+        display: grid;
+        place-content: center;
+    
+        
+    
+    
+    
+    
+    }
+    
+    .headerImageContainer {
+    
+    
+    
+    
+    }
+    
+    .mainImage {
+        width: 14.5em;
+        height: 14.5em;
+        margin: 0 auto;
+        position: absolute;
+        left: 50%;
+        top: 18%;
+        transform:translate(-50%, -50%);
+        -webkit-transform:translate(-50%, -50%);
+        -moz-transform:translate(-50%, -50%);
+        -ms-transform:translate(-50%, -50%);
+        -o-transform:translate(-50%, -50%);
+    
+    
+    }
+    
+    .mainHeaderContainer {
+    }
+    
+    .mainTextHeader {
+        margin: 0 auto;
+        margin-top: 5rem !important;
+        display: grid;
+        place-content: center;
+        font-size: 2.1rem;
+        font-weight: bolder;
+        text-align: center;
+        line-height: 1.12555;
+        color: #013699;
+        position: absolute;
+        top: 30%;
+        left: 50%;
+        right: 50%;
+    
+    
+        transform:translate(-50%, -50%) ;
+        -webkit-transform:translate(-50%, -50%) ;
+        -moz-transform:translate(-50%, -50%) ;
+        -ms-transform:translate(-50%, -50%) ;
+        -o-transform:translate(-50%, -50%) ;
+    }
+    
+    .mainSupportingTextContainer {
+        width: 75vw;
+        max-width: 600px;
+        margin: 0 auto;
+        text-align: center;
+        margin-bottom: 7.5rem;
+        margin-top: 0.65em;
+        color: #69696f;
+        position: absolute;
+        left: 50%;
+        right: 50%;
+        bottom: 5%;
+        transform:translate(-50%, -50%) ;
+        -webkit-transform:translate(-50%, -50%) ;
+        -moz-transform:translate(-50%, -50%) ;
+        -ms-transform:translate(-50%, -50%) ;
+        -o-transform:translate(-50%, -50%) ;
+        /* outline: 2px solid lime; */
+    
+    }
+    
+    
+    .pagination{
+    
+    
+    
+    
+    }
+    
+    .ctaContainer{
+    
+    
+        height: 3em; 
+        display: grid;
+        place-content: center;
+    
+    
+    
+    
+    }
+    
+    
+    .cta{
+        height: 55px;
+        width: 275px;
+        background-color: #f49b53;
+        display: grid;
+        place-content: center;
+        border-radius:19px;
+        -webkit-border-radius:19px;
+        -moz-border-radius:19px;
+        -ms-border-radius:19px;
+        -o-border-radius:19px;
+        margin-top: -4em;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+        cursor: pointer;
+        color: white;
+        font-size: 1.5rem;
+        font-weight: bolder;
+        
+        transition: all 0.1s ease-in-out;
+        position: absolute;
+        left: 50%;
+        right: 50%;
+        bottom: 19.5%;
+        
+    
+        transform: translate(-50%, 5%) scale(1);
+        -webkit-transform: translate(-50%, 5%) scale(1);
+        -moz-transform: translate(-50%, 5%) scale(1);
+        -ms-transform: translate(-50%, 5%) scale(1);
+        -o-transform: translate(-50%, 5%) scale(1);
+    }
+    
+        
+    .paginationList{
+        transform:translate(0, 55vh) !important;
+        -webkit-transform:translate(0, 55vh) !important;
+        -moz-transform:translate(0, 55vh) !important;
+        -ms-transform:translate(0, 55vh) !important;
+        -o-transform:translate(0, 55vh) !important;
+    }
+    
+    
+    
+    
+    
+    }
