--- a/app/Styles/function.module.css
+++ b/app/Styles/function.module.css
@@ -160,6 +160,184 @@
 
 
 
+@media (min-width: 375px) and (max-width: 450px){
+
+
+
+    
+    .mainContainer {
+        background-color: white !important;
+        min-height: 100vh;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        position: relative; 
+    
+    }
+    
+    
+    .subContainer{
+    
+        width: 50vw; 
+        margin: 0 auto; 
+        padding-top: 27vh; 
+        display: grid;
+        place-content: center;
+    
+        
+    
+    
+    
+    
+    }
+    
+    .headerImageContainer {
+    
+    
+    
+    
+    }
+    
+    .mainImage {
+        width: 14.5em;
+        height: 14.5em;
+        margin: 0 auto;
+        position: absolute;
+        left: 50%;
+        top: 18%;
+        transform:translate(-50%, -50%);
+        -webkit-transform:translate(-50%, -50%);
+        -moz-transform:translate(-50%, -50%);
+        -ms-transform:translate(-50%, -50%);
+        -o-transform:translate(-50%, -50%);
+    
+    
+    }
+    
+    .mainHeaderContainer {
+    }
+    
+    .mainTextHeader {
+        margin: 0 auto;
+        margin-top: 5rem !important;
+        display: grid;
+        place-content: center;
+        font-size: 2.1rem;
+        font-weight: bolder;
+        text-align: center;
+        line-height: 1.12555;
+        color: #013699;
+        position: absolute;
+        top: 30%;
+        left: 50%;
+        right: 50%;
+    
+    
+        transform:translate(-50%, -50%) ;
+        -webkit-transform:translate(-50%, -50%) ;
+        -moz-transform:translate(-50%, -50%) ;
+        -ms-transform:translate(-50%, -50%) ;
+        -o-transform:translate(-50%, -50%) ;
+    }
+    
+    .mainSupportingTextContainer {
+        width: 75vw;
+        max-width: 600px;
+        margin: 0 auto;
+        text-align: center;
+        margin-bottom: 7.5rem;
+        margin-top: 0.65em;
+        color: #69696f;
+        position: absolute;
+        left: 50%;
+        right: 50%;
+        bottom: 22%;
+
+        
+
+        transform:translate(-50%, -50%) ;
+        -webkit-transform:translate(-50%, -50%) ;
+        -moz-transform:translate(-50%, -50%) ;
+        -ms-transform:translate(-50%, -50%) ;
+        -o-transform:translate(-50%, -50%) ;
+        /* outline: 2px solid lime; */
+    
+    }
+    
+    
+    .pagination{
+    
+    
+    
+    
+    }
+    
+    .ctaContainer{
+    
+    
+        height: 3em; 
+        display: grid;
+        place-content: center;
+    
+    
+    
+    
+    }
+    
+    
+    .cta{
+        height: 55px;
+        width: 275px;
+        background-color: #f49b53;
+        display: grid;
+        place-content: center;
+        border-radius:19px;
+        -webkit-border-radius:19px;
+        -moz-border-radius:19px;
+        -ms-border-radius:19px;
+        -o-border-radius:19px;
+        margin-top: -4em;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+        cursor: pointer;
+        color: white;
+        font-size: 1.5rem;
+        font-weight: bolder;
+        
+        transition: all 0.1s ease-in-out;
+        position: absolute;
+        left: 50%;
+        right: 50%;
+        bottom: 19.5%;
+        
+    
+        transform: translate(-50%, 5%) scale(1);
+        -webkit-transform: translate(-50%, 5%) scale(1);
+        -moz-transform: translate(-50%, 5%) scale(1);
+        -ms-transform: translate(-50%, 5%) scale(1);
+        -o-transform: translate(-50%, 5%) scale(1);
+    }
+    
+        
+    .paginationList{
+        transform:translate(0, 55vh) !important;
+        -webkit-transform:translate(0, 55vh) !important;
+        -moz-transform:translate(0, 55vh) !important;
+        -ms-transform:translate(0, 55vh) !important;
+        -o-transform:translate(0, 55vh) !important;
+
+
+
+    }
+    
+    
+    
+    }
+
+
+
 
 
 
