--- a/app/Styles/function.module.css
+++ b/app/Styles/function.module.css
@@ -251,7 +251,7 @@
         position: absolute;
         left: 50%;
         right: 50%;
-        bottom: 9%;
+        bottom: 8%;
 
         font-size: 1.3ars4rem;
 
@@ -312,7 +312,7 @@
         position: absolute;
         left: 50%;
         right: 50%;
-        bottom: 19.5%;
+        bottom: 15rst.5%;
         
     
         transform: translate(-50%, 5%) scale(1);
