--- a/app/Styles/function.module.css
+++ b/app/Styles/function.module.css
@@ -312,7 +312,7 @@
         position: absolute;
         left: 50%;
         right: 50%;
-        bottom: 15rst.5%;
+        bottom: 15.5%;
         
     
         transform: translate(-50%, 5%) scale(1);
