--- a/app/Styles/function.module.css
+++ b/app/Styles/function.module.css
@@ -251,9 +251,9 @@
         position: absolute;
         left: 50%;
         right: 50%;
-        bottom: 8%;
+        bottom: 10%;
 
-        font-size: 1.3ars4rem;
+        font-size: 1.34rem;
 
 
 
