--- a/app/Styles/audioButtons.module.css
+++ b/app/Styles/audioButtons.module.css
@@ -8,6 +8,9 @@
     background: none;
     z-index: 1000;
     width: 100%;
+
+    outline: 2px solid lime;
+
     
 
 
@@ -46,7 +49,7 @@
     padding: 0;
     font-family: var(--font-chewy), cursive;
     font-weight: 400;
-    font-size: 1rem;
+    font-size: 1.34rem;
     text-transform: uppercase;
     user-select: none;
     -webkit-user-select: none;
@@ -74,6 +77,7 @@
     padding-top: 3px; 
     background-color: red;
     
+
     border-radius: 50%;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
