--- a/app/Styles/audioButtons.module.css
+++ b/app/Styles/audioButtons.module.css
@@ -25,7 +25,7 @@
 
 .buttonList {
     display: flex; 
-    gap: 5.8rem; 
+    gap: 2.8rem; 
 
 
 
@@ -44,12 +44,12 @@
     display: grid;
     cursor: pointer !important;
     place-content: center;
-    width: calc(6rem + 0px) !important;
-    height: calc(2rem + 0px) !important;
+    width: calc(7rem + 0px) !important;
+    height: calc(1rem + 0px) !important;
     padding: 0;
     font-family: var(--font-chewy), cursive;
     font-weight: 400;
-    font-size: 1.34rem;
+    font-size: 1.8rem;
     text-transform: uppercase;
     user-select: none;
     -webkit-user-select: none;
@@ -61,6 +61,8 @@
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
     color: white; 
+
+    outline: 2px solid lime;
     
 }
 
