--- a/app/Styles/ideal.module.css
+++ b/app/Styles/ideal.module.css
@@ -70,7 +70,8 @@
     position: absolute;
     left: 50%;
     right: 50%;
-    bottom: 46%; 
+    bottom: 51%; 
+
     transform:translate(-50%, -50%);
     -webkit-transform:translate(-50%, -50%);
     -moz-transform:translate(-50%, -50%);
@@ -88,7 +89,7 @@
     position: absolute;
     left: 50%;
     right: 50%;
-    bottom: 20%;
+    bottom: 25%;
     transform:translate(-50%, -50%);
     -webkit-transform:translate(-50%, -50%);
     -moz-transform:translate(-50%, -50%);
@@ -104,23 +105,39 @@
 .paginationElementContainer{
    
 
-    /* display: none; */
-
     
 
 
 }
 
+.paginationElementSubContainer{
 
-.paginationList{
-    transform:translate(0, 48vh) !important;
-    -webkit-transform:translate(0, 48vh) !important;
-    -moz-transform:translate(0, 48vh) !important;
-    -ms-transform:translate(0, 48vh) !important;
-    -o-transform:translate(0, 48vh) !important;
+
+
+
+
+
 }
 
 
+
+
+
+.paginationList{
+ 
+    /* outline: 22px solid lime; */
+    position: absolute;
+    bottom: 31.7%;
+    left: 50%;
+
+
+    transform:translate(-50%, -50%);
+    -webkit-transform:translate(-50%, -50%);
+    -moz-transform:translate(-50%, -50%);
+    -ms-transform:translate(-50%, -50%);
+    -o-transform:translate(-50%, -50%);
+
+}
 
 
 
@@ -132,8 +149,6 @@
     place-content: center;
 
 
-
-
 }
 
 
@@ -142,7 +157,6 @@
     width: 275px;
     background-color: #f49b53;
     display: grid;
-    /* position: relative; */
 
     place-content: center;
     border-radius:19px;
@@ -167,15 +181,12 @@
     position: absolute;
     left: 50%;
     right: 50%;
-    bottom: 25%;
+    bottom: 18%;
     transform: translate(-50%, -50%) scale(1);
     -webkit-transform: translate(-50%, -50%) scale(1);
     -moz-transform: translate(-50%, -50%) scale(1);
     -ms-transform: translate(-50%, -50%) scale(1);
     -o-transform: translate(-50%, -50%) scale(1);
-
-
-
 
 
 }
@@ -234,10 +245,13 @@
 }
 
 .mainImage {
-    width: 14.5em;
-    height: 14.5em;
+    min-width: 14.5em;
+    min-height: 14.5em;
+    max-width: 14.4em;
+    max-height: 14.5em;
     margin: 0 auto;
     position: absolute;
+
     left: 50%;
     top: 18%;
     transform:translate(-50%, -50%);
@@ -292,9 +306,9 @@
     -moz-transform:translate(-50%, -50%) ;
     -ms-transform:translate(-50%, -50%) ;
     -o-transform:translate(-50%, -50%) ;
-    /* outline: 2px solid lime; */
 
 }
+
 
 
 .pagination{
