--- a/app/Styles/understand.module.css
+++ b/app/Styles/understand.module.css
@@ -34,20 +34,17 @@
 
 
 
-
-
-
-
-
 }
 
 .mainImage {
-    width: 16em;
-    height: 16em;
+    min-width: 12.5em;
+    min-height: 12.5em;
+    max-width: 12.4em;
+    max-height: 12.5em;
     margin: 0 auto;
     position: absolute;
     left: 50%;
-    top: 23%;
+    top: 17%;
     transform:translate(-50%, -50%);
     -webkit-transform:translate(-50%, -50%);
     -moz-transform:translate(-50%, -50%);
@@ -61,7 +58,7 @@
     position: absolute;
     left: 50%;
     right: 50%;
-    top: 38%;
+    top: 25%;
     width: 80%;
     max-width: 400px;
     transform:translate(-50%, -2%) ;
@@ -100,7 +97,7 @@
     position: absolute;
     left: 50%;
     right: 50%;
-    top: 62%;
+    top: 49%;
 
 
     transform: translate(-50%, -50%);
@@ -113,6 +110,35 @@
 
 .pagination{
 
+
+
+
+}
+
+
+.paginationElementContainer{
+    position: absolute;
+    left: 50%;
+    bottom: 32%;
+    transform:translate(-50%, -70%) ;
+    -webkit-transform:translate(-50%, -70%) ;
+    -moz-transform:translate(-50%, -70%) ;
+    -ms-transform:translate(-50%, -70%) ;
+    -o-transform:translate(-50%, -70%) ;
+}
+
+
+.paginationElementSubContainer{
+
+
+
+
+
+
+}
+
+
+.paginationList{
 
 
 
@@ -230,7 +256,6 @@
     .paginationElementContainer{
 
 
-        outline: 44px solid lime;
 
 
 
