--- a/app/Styles/adult.module.css
+++ b/app/Styles/adult.module.css
@@ -523,7 +523,7 @@
         position: absolute;
         left: 50%;
         right: 50%;
-        bottom: 19.5%;
+        bottom: 18%;
         
     
         transform: translate(-50%, 5%) scale(1);
@@ -533,14 +533,29 @@
         -o-transform: translate(-50%, 5%) scale(1);
     }
     
+    .cta:hover {
+        background-color: #e8894a;
+        transform: translate(-50%, 5%) scale(1.02);
+        box-shadow: 0 2px 8px rgba(244, 155, 83, 0.3);
+    }
+    
+    .cta:active {
+        background-color: #d67d3e;
+        transform: translate(-50%, 5%) scale(0.98);
+        box-shadow: 0 1px 4px rgba(244, 155, 83, 0.4);
+    }
+    
         
     .paginationList{
-        transform:translate(0, 55vh) !important;
-        -webkit-transform:translate(0, 55vh) !important;
-        -moz-transform:translate(0, 55vh) !important;
-        -ms-transform:translate(0, 55vh) !important;
-        -o-transform:translate(0, 55vh) !important;
-    }
+        position: absolute;
+        left: 50%;
+        bottom: -5% !important;
+        transform:translate(-50%, 350%) !important;
+        -webkit-transform:translate(-50%, 350%) !important;
+        -moz-transform:translate(-50%, 350%) !important;
+        -ms-transform:translate(-50%, 350%) !important;
+        -o-transform:translate(-50%, 350%) !important;
+}
     
     
     
