--- a/app/Styles/function.module.css
+++ b/app/Styles/function.module.css
@@ -124,11 +124,6 @@
     position: absolute;
     bottom: 17.9%;
     left: 50%;
-    transform:translate(-50%, -50%) !important;
-    -webkit-transform:translate(-50%, -50%) !important;
-    -moz-transform:translate(-50%, -50%) !important;
-    -ms-transform:translate(-50%, -50%) !important;
-    -o-transform:translate(-50%, -50%) !important;
     -webkit-user-select: none;
     /*Safari*/-moz-user-select: none;
     /*Firefox*/-ms-user-select: none;
@@ -138,18 +133,22 @@
     font-size: 1.5rem;
     font-weight: bolder;
     transition: all 0.1s ease-in-out;
-    transform: scale(1);
+    transform: translate(-50%, -50%) scale(1);
+    -webkit-transform: translate(-50%, -50%) scale(1);
+    -moz-transform: translate(-50%, -50%) scale(1);
+    -ms-transform: translate(-50%, -50%) scale(1);
+    -o-transform: translate(-50%, -50%) scale(1);
 }
 
 .cta:hover {
     background-color: #e8894a;
-    transform: scale(1.02);
+    transform: translate(-50%, -50%) scale(1.02);
     box-shadow: 0 2px 8px rgba(244, 155, 83, 0.3);
 }
 
 .cta:active {
     background-color: #d67d3e;
-    transform: scale(0.98);
+    transform: translate(-50%, -50%) scale(0.98);
     box-shadow: 0 1px 4px rgba(244, 155, 83, 0.4);
 }
 
@@ -159,11 +158,11 @@
     position: absolute;
     left: 50%;
     bottom: 31%;
-    transform:translate(-50%, -50%) !important ;
-    -webkit-transform:translate(-50%, -50%) !important ;
-    -moz-transform:translate(-50%, -50%) !important ;
-    -ms-transform:translate(-50%, -50%) !important ;
-    -o-transform:translate(-50%, -50%) !important ;
+    transform:translate(-50%, -50%) !important;
+    -webkit-transform:translate(-50%, -50%) !important;
+    -moz-transform:translate(-50%, -50%) !important;
+    -ms-transform:translate(-50%, -50%) !important;
+    -o-transform:translate(-50%, -50%) !important;
 }
 
 
@@ -346,27 +345,50 @@
         position: absolute;
         left: 50%;
         right: 50%;
-        bottom: 18.2%;
-        
-    
-        transform: translate(-50%, 5%) scale(1);
-        -webkit-transform: translate(-50%, 5%) scale(1);
-        -moz-transform: translate(-50%, 5%) scale(1);
-        -ms-transform: translate(-50%, 5%) scale(1);
-        -o-transform: translate(-50%, 5%) scale(1);
+        bottom: 13%;
+            
+     
     }
     
         
-    .paginationList{
-        transform:translate(0, 55vh) !important;
-        -webkit-transform:translate(0, 55vh) !important;
-        -moz-transform:translate(0, 55vh) !important;
-        -ms-transform:translate(0, 55vh) !important;
-        -o-transform:translate(0, 55vh) !important;
+   
+
+
+.paginationElementContainer{
+    position: absolute;
+    left: 50%;
+    bottom: 26%;
+    transform:translate(-50%, -50%) !important;
+    -webkit-transform:translate(-50%, -50%) !important;
+    -moz-transform:translate(-50%, -50%) !important;
+    -ms-transform:translate(-50%, -50%) !important;
+    -o-transform:translate(-50%, -50%) !important;
+}
+
+
+.paginationElementSubContainer{
 
 
 
-    }
+
+
+
+
+
+}
+
+
+.paginationList{
+    position: absolute;
+    bottom: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+}
+
     
     
     
