--- a/app/Styles/ideal.module.css
+++ b/app/Styles/ideal.module.css
@@ -79,6 +79,7 @@
     -o-transform:translate(-50%, -50%);
 }
 
+
 .mainSupportingTextContainer {
     width: 80%;
     margin: 0 auto;
@@ -245,15 +246,15 @@
 }
 
 .mainImage {
-    min-width: 14.5em;
-    min-height: 14.5em;
-    max-width: 14.4em;
-    max-height: 14.5em;
+    min-width: 12.5em;
+    min-height: 12.5em;
+    max-width: 12.4em;
+    max-height: 12.5em;
     margin: 0 auto;
     position: absolute;
 
     left: 50%;
-    top: 18%;
+    top: 15%;
     transform:translate(-50%, -50%);
     -webkit-transform:translate(-50%, -50%);
     -moz-transform:translate(-50%, -50%);
@@ -277,7 +278,7 @@
     line-height: 1.12555;
     color: #013699;
     position: absolute;
-    top: 30%;
+    top: 27%;
     left: 50%;
     right: 50%;
 
@@ -300,12 +301,13 @@
     position: absolute;
     left: 50%;
     right: 50%;
-    bottom: 5%;
-    transform:translate(-50%, -50%) ;
-    -webkit-transform:translate(-50%, -50%) ;
-    -moz-transform:translate(-50%, -50%) ;
-    -ms-transform:translate(-50%, -50%) ;
-    -o-transform:translate(-50%, -50%) ;
+    bottom: 8.5%;
+    transform:translate(-50%, -50%);
+    -webkit-transform:translate(-50%, -50%);
+    -moz-transform:translate(-50%, -50%);
+    -ms-transform:translate(-50%, -50%);
+    -o-transform:translate(-50%, -50%);
+
 
 }
 
@@ -356,8 +358,10 @@
     position: absolute;
     left: 50%;
     right: 50%;
-    bottom: 19.5%;
+    bottom: 18%;
     
+
+
 
     transform: translate(-50%, 5%) scale(1);
     -webkit-transform: translate(-50%, 5%) scale(1);
@@ -366,17 +370,49 @@
     -o-transform: translate(-50%, 5%) scale(1);
 }
 
-    
-.paginationList{
-    transform:translate(0, 55vh) !important;
-    -webkit-transform:translate(0, 55vh) !important;
-    -moz-transform:translate(0, 55vh) !important;
-    -ms-transform:translate(0, 55vh) !important;
-    -o-transform:translate(0, 55vh) !important;
+.cta:hover {
+    background-color: #e8894a;
+    transform: translate(-50%, 5%) scale(1.02);
+    box-shadow: 0 2px 8px rgba(244, 155, 83, 0.3);
+}
+
+.cta:active {
+    background-color: #d67d3e;
+    transform: translate(-50%, 5%) scale(0.98);
+    box-shadow: 0 1px 4px rgba(244, 155, 83, 0.4);
 }
 
 
+.paginationElementContainer{
+   
 
+    
+
+
+}
+
+.paginationElementSubContainer{
+
+
+
+
+
+
+}
+
+    
+.paginationList{
+  
+
+
+    position: absolute; 
+    bottom: 27.6%;
+    
+
+
+
+
+}
 
 
 }
