--- a/app/Styles/start.module.css
+++ b/app/Styles/start.module.css
@@ -82,7 +82,7 @@ font-size: clamp(1.5rem + 1vw, 2rem, 3rem);
     -ms-border-radius: 14px;
     -o-border-radius: 14px;
     cursor: pointer;
-    
+
 
 
 
@@ -144,7 +144,54 @@ font-size: clamp(1.5rem + 1vw, 2rem, 3rem);
 
 
 
+@media (min-width: 300px) and (max-width: 900px) {
 
+
+    .buttonSectionContainer{
+
+        display: grid;
+        place-content: center;
+        margin: 3em auto; 
+    
+        margin-bottom: 0.5em !important;
+
+    
+    
+    }
+    
+    
+    .CTAButton{
+       
+        color: white;
+        width: 300px; 
+        height: 55px;  
+        font-weight: bolder;
+        font-size: 1.4rem;
+        
+        background-color: #f49b53;
+        display: grid;
+        place-content: center;
+        border-radius: 14px;
+        -webkit-border-radius: 14px;
+        -moz-border-radius: 14px;
+        -ms-border-radius: 14px;
+        -o-border-radius: 14px;
+        cursor: pointer;
+        
+
+        
+    
+    
+    
+    }
+
+
+
+
+
+
+
+}
 
 
 
