--- a/app/Styles/PhoneBarChart.module.css
+++ b/app/Styles/PhoneBarChart.module.css
@@ -38,12 +38,16 @@
     margin: 0rem auto;
 
     margin-top: -0.5em !important; 
+    /* margin-bottom: 1em !important; */
+    
 
     border-radius: 50%;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
+
+
 
 
 
@@ -60,7 +64,6 @@
         color: rgb(41, 39, 39);
         position: relative; 
         min-height: auto;
-
 
 }
 
@@ -518,6 +521,11 @@
 }
 
 /* Responsive Design */
+
+
+
+
+
 @media (max-width: 768px) {
     .barChartSection {
         width: 95%;
@@ -668,6 +676,52 @@
 
 
 
+
+
+
+
+}
+
+
+@media(min-width:2000px){
+
+
+
+    .mainScore{
+        outline: 12px solid white;
+        width: 120px;
+        height: 120px;
+        font-size: 4rem;
+        color: white;
+        background-color: #99bb9a;
+        /* background-color: red !important; */
+        display: grid;
+        place-content: center;
+        margin: 0rem auto;
+    
+        margin-top: -0.5em !important; 
+        margin-bottom: 1em !important;
+        /* outline: 22px solid red; */
+        
+    
+        border-radius: 50%;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        -ms-border-radius: 50%;
+        -o-border-radius: 50%;
+    
+    
+    
+    
+    }
+
+    .refSpan{
+
+        margin-top: -0.5em !important; 
+
+
+
+    }
 
 
 
